<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="344dp"
        android:layout_height="313dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148">

        <TextView
            android:id="@+id/fname"
            android:layout_width="74dp"
            android:layout_height="22dp"
            android:text="@string/fname"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toEndOf="@+id/nameText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/lname"
            android:layout_width="74dp"
            android:layout_height="22dp"
            android:text="@string/lname"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toEndOf="@+id/fname"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/data"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/age"
            app:layout_constraintStart_toStartOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/age"
            app:layout_constraintEnd_toEndOf="@+id/lname"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toEndOf="@+id/ageText"
            app:layout_constraintTop_toBottomOf="@+id/fname" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/morf"
            app:layout_constraintEnd_toEndOf="@+id/lname"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toEndOf="@+id/genderText"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/user"
            app:layout_constraintEnd_toEndOf="@+id/lname"
            app:layout_constraintHorizontal_bias="0.174"
            app:layout_constraintStart_toEndOf="@+id/usernmaeText"
            app:layout_constraintTop_toBottomOf="@+id/gender" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pass"
            app:layout_constraintEnd_toEndOf="@+id/lname"
            app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintStart_toEndOf="@+id/passwordText"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/genderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            app:layout_constraintEnd_toEndOf="@+id/ageText"
            app:layout_constraintTop_toBottomOf="@+id/ageText" />

        <TextView
            android:id="@+id/usernmaeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="@+id/genderText"
            app:layout_constraintTop_toBottomOf="@+id/genderText" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/usernmaeText"
            app:layout_constraintTop_toBottomOf="@+id/usernmaeText" />

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.81"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lname"
            app:layout_constraintVertical_bias="0.246" >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>